[package]
name = "skep"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/foxzool/skep_engine"
authors = ["FoxZoOL <zhooul@gmail.com>"]
license = "Apache-2.0"

[features]
default = ["gui"]
gui = ["bevy-inspector-egui", "bevy"]

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_state",
    "bevy_color",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "smaa_luts",
    "default_font",
    "webgl2",
    "sysinfo_plugin",
], optional = true }
bevy-inspector-egui = { version = "0.26", optional = true }
skep_core = { path = "crates/skep_core" }
skep_mqtt = { path = "crates/skep_mqtt" }


[workspace]
resolver = "2"
members = ["crates/skep_mqtt", "crates/skep_core", "crates/skep_sensor"]



[workspace.dependencies]
skep_core = { path = "crates/skep_core" }
skep_mqtt = { path = "crates/skep_mqtt" }
skep_sensor = { path = "crates/skep_sensor" }


bevy_app = "0.14.2"
bevy_core = "0.14.2"
bevy_log = "0.14.2"
bevy_ecs = "0.14.2"
bevy_derive = "0.14.2"
bevy_hierarchy = "0.14.2"
bevy_reflect = "0.14.2"
bevy_state = "0.14.2"
bevy_utils = "0.14.2"

anyhow = { version = "1.0.44" }
chrono = "0.4"
log = "0.4.14"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.64"
strum = "0.26"
strum_macros = "0.26"


[patch.crates-io]
bevy_mqtt = { path = "../bevy_mqtt" }