[package]
name = "skep_core"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_app = { workspace = true }
bevy_core = { workspace = true }
bevy_ecs = { workspace = true }
bevy_derive = { workspace = true }
bevy_hierarchy = { workspace = true }
bevy_reflect = { workspace = true }
bevy_utils = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

either = "1.13"
toml = { version = "0.8.19" }
uuid = { version = "1.10", features = ["v4", "fast-rng", "macro-diagnostics", ] }
serde-toml-merge = { version = "0.3.8" }
serde-aux = { version = "4.5" }
