[package]
name = "skep_sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
skep_core = { path = "../skep_core" }

anyhow = { workspace = true }
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_hierarchy = { workspace = true }
bevy_reflect = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }